library/user/utilities/PAGERCTL/pagerctl.py

"""
pagerctl.py - Python ctypes wrapper for libpagerctl.so

WiFi Pineapple Pager hardware control library.
Use this for smooth, responsive applications on the Pager.

Example:
    from pagerctl import Pager

    pager = Pager()
    pager.init()
    pager.set_rotation(270)
    pager.clear(pager.rgb(0, 0, 32))
    pager.draw_text(10, 10, "Hello!", pager.WHITE, 2)
    pager.flip()
    pager.cleanup()
"""

import os
from ctypes import CDLL, Structure, c_int, c_uint8, c_uint16, c_uint32, c_float, c_char, c_char_p, c_void_p, POINTER, byref


class PagerInput(Structure):
    """Input state structure matching pager_input_t in C."""
    _fields_ = [
        ("current", c_uint8),   # Currently held buttons (bitmask)
        ("pressed", c_uint8),   # Just pressed this frame (bitmask)
        ("released", c_uint8),  # Just released this frame (bitmask)
    ]


class PagerInputEvent(Structure):
    """Input event structure for thread-safe event queue."""
    _fields_ = [
        ("button", c_uint8),     # Which button (single bit from PBTN_* bitmask)
        ("type", c_int),         # Event type (PAGER_EVENT_*)
        ("timestamp", c_uint32), # When event occurred (ms since init)
    ]


# Event types for PagerInputEvent
PAGER_EVENT_NONE = 0
PAGER_EVENT_PRESS = 1
PAGER_EVENT_RELEASE = 2

# Find the shared library (portable - looks relative to this file first)
_lib_paths = [
    os.path.join(os.path.dirname(os.path.abspath(__file__)), "libpagerctl.so"),
    "./libpagerctl.so",
]

_lib = None
for path in _lib_paths:
    if os.path.exists(path):
        _lib = CDLL(path)
        break

if _lib is None:
    raise OSError("Could not find libpagerctl.so - build with: make remote-build")


class Pager:
    """High-level wrapper for pager hardware control."""

    # Predefined colors (RGB565)
    BLACK = 0x0000
    WHITE = 0xFFFF
    RED = 0xF800
    GREEN = 0x07E0
    BLUE = 0x001F
    YELLOW = 0xFFE0
    CYAN = 0x07FF
    MAGENTA = 0xF81F
    ORANGE = 0xFD20
    PURPLE = 0x8010
    GRAY = 0x8410

    # Rotation modes
    ROTATION_0 = 0      # Portrait 222x480
    ROTATION_90 = 90    # Landscape 480x222
    ROTATION_180 = 180  # Portrait inverted
    ROTATION_270 = 270  # Landscape inverted (default)

    # Font sizes (for built-in bitmap font)
    FONT_SMALL = 1   # 5x7
    FONT_MEDIUM = 2  # 10x14
    FONT_LARGE = 3   # 15x21

    # Button masks
    BTN_UP = 0x01
    BTN_DOWN = 0x02
    BTN_LEFT = 0x04
    BTN_RIGHT = 0x08
    BTN_A = 0x10     # Green
    BTN_B = 0x20     # Red
    BTN_POWER = 0x40 # Power button

    # Input event types (for get_input_event)
    EVENT_NONE = 0
    EVENT_PRESS = 1
    EVENT_RELEASE = 2

    # RTTTL playback modes
    RTTTL_SOUND_ONLY = 0     # Sound only (default)
    RTTTL_SOUND_VIBRATE = 1  # Sound + vibration
    RTTTL_VIBRATE_ONLY = 2   # Silent vibration pattern

    # RTTTL melodies
    RTTTL_TETRIS = (
        "tetris:d=4,o=5,b=160:"
        "e6,8b,8c6,8d6,16e6,16d6,8c6,8b,a,8a,8c6,e6,8d6,8c6,"
        "b,8b,8c6,d6,e6,c6,a,2a,8p,"
        "d6,8f6,a6,8g6,8f6,e6,8e6,8c6,e6,8d6,8c6,"
        "b,8b,8c6,d6,e6,c6,a,a"
    )
    RTTTL_GAME_OVER = "smbdeath:d=4,o=5,b=90:8p,16b,16f6,16p,16f6,16f.6,16e.6,16d6,16c6,16p,16e,16p,16c,4p"
    RTTTL_LEVEL_UP = "levelup:d=16,o=5,b=200:c,e,g,c6,8p,g,c6,e6,8g6"

    def __init__(self):
        self._setup_functions()
        self._initialized = False

    def _setup_functions(self):
        """Set up ctypes function signatures."""
        # Init/cleanup
        _lib.pager_init.argtypes = []
        _lib.pager_init.restype = c_int
        _lib.pager_cleanup.argtypes = []
        _lib.pager_cleanup.restype = None

        # Rotation
        _lib.pager_set_rotation.argtypes = [c_int]
        _lib.pager_set_rotation.restype = None
        _lib.pager_get_width.argtypes = []
        _lib.pager_get_width.restype = c_int
        _lib.pager_get_height.argtypes = []
        _lib.pager_get_height.restype = c_int

        # Frame management
        _lib.pager_flip.argtypes = []
        _lib.pager_flip.restype = None
        _lib.pager_clear.argtypes = [c_uint16]
        _lib.pager_clear.restype = None
        _lib.pager_get_ticks.argtypes = []
        _lib.pager_get_ticks.restype = c_uint32
        _lib.pager_delay.argtypes = [c_uint32]
        _lib.pager_delay.restype = None
        _lib.pager_frame_sync.argtypes = []
        _lib.pager_frame_sync.restype = c_uint32

        # Drawing
        _lib.pager_set_pixel.argtypes = [c_int, c_int, c_uint16]
        _lib.pager_set_pixel.restype = None
        _lib.pager_fill_rect.argtypes = [c_int, c_int, c_int, c_int, c_uint16]
        _lib.pager_fill_rect.restype = None
        _lib.pager_draw_rect.argtypes = [c_int, c_int, c_int, c_int, c_uint16]
        _lib.pager_draw_rect.restype = None
        _lib.pager_hline.argtypes = [c_int, c_int, c_int, c_uint16]
        _lib.pager_hline.restype = None
        _lib.pager_vline.argtypes = [c_int, c_int, c_int, c_uint16]
        _lib.pager_vline.restype = None
        _lib.pager_draw_line.argtypes = [c_int, c_int, c_int, c_int, c_uint16]
        _lib.pager_draw_line.restype = None
        _lib.pager_fill_circle.argtypes = [c_int, c_int, c_int, c_uint16]
        _lib.pager_fill_circle.restype = None
        _lib.pager_draw_circle.argtypes = [c_int, c_int, c_int, c_uint16]
        _lib.pager_draw_circle.restype = None

        # Text (built-in font)
        _lib.pager_draw_char.argtypes = [c_int, c_int, c_char, c_uint16, c_int]
        _lib.pager_draw_char.restype = c_int
        _lib.pager_draw_text.argtypes = [c_int, c_int, c_char_p, c_uint16, c_int]
        _lib.pager_draw_text.restype = c_int
        _lib.pager_draw_text_centered.argtypes = [c_int, c_char_p, c_uint16, c_int]
        _lib.pager_draw_text_centered.restype = None
        _lib.pager_text_width.argtypes = [c_char_p, c_int]
        _lib.pager_text_width.restype = c_int
        _lib.pager_draw_number.argtypes = [c_int, c_int, c_int, c_uint16, c_int]
        _lib.pager_draw_number.restype = c_int

        # TTF text
        _lib.pager_draw_ttf.argtypes = [c_int, c_int, c_char_p, c_uint16, c_char_p, c_float]
        _lib.pager_draw_ttf.restype = c_int
        _lib.pager_ttf_width.argtypes = [c_char_p, c_char_p, c_float]
        _lib.pager_ttf_width.restype = c_int
        _lib.pager_ttf_height.argtypes = [c_char_p, c_float]
        _lib.pager_ttf_height.restype = c_int
        _lib.pager_draw_ttf_centered.argtypes = [c_int, c_char_p, c_uint16, c_char_p, c_float]
        _lib.pager_draw_ttf_centered.restype = None
        _lib.pager_draw_ttf_right.argtypes = [c_int, c_char_p, c_uint16, c_char_p, c_float, c_int]
        _lib.pager_draw_ttf_right.restype = None
        _lib.pager_ttf_cleanup.argtypes = []
        _lib.pager_ttf_cleanup.restype = None

        # Audio
        _lib.pager_play_rtttl.argtypes = [c_char_p]
        _lib.pager_play_rtttl.restype = None
        _lib.pager_play_rtttl_ex.argtypes = [c_char_p, c_int]
        _lib.pager_play_rtttl_ex.restype = None
        _lib.pager_stop_audio.argtypes = []
        _lib.pager_stop_audio.restype = None
        _lib.pager_audio_playing.argtypes = []
        _lib.pager_audio_playing.restype = c_int
        _lib.pager_beep.argtypes = [c_int, c_int]
        _lib.pager_beep.restype = None
        _lib.pager_play_rtttl_sync.argtypes = [c_char_p, c_int]
        _lib.pager_play_rtttl_sync.restype = None

        # Vibration
        _lib.pager_vibrate.argtypes = [c_int]
        _lib.pager_vibrate.restype = None
        _lib.pager_vibrate_pattern.argtypes = [c_char_p]
        _lib.pager_vibrate_pattern.restype = None

        # LEDs
        _lib.pager_led_set.argtypes = [c_char_p, c_int]
        _lib.pager_led_set.restype = None
        _lib.pager_led_rgb.argtypes = [c_char_p, c_uint8, c_uint8, c_uint8]
        _lib.pager_led_rgb.restype = None
        _lib.pager_led_dpad.argtypes = [c_char_p, c_uint32]
        _lib.pager_led_dpad.restype = None
        _lib.pager_led_all_off.argtypes = []
        _lib.pager_led_all_off.restype = None

        # Random
        _lib.pager_random.argtypes = [c_int]
        _lib.pager_random.restype = c_int
        _lib.pager_seed_random.argtypes = [c_uint32]
        _lib.pager_seed_random.restype = None

        # Input
        _lib.pager_wait_button.argtypes = []
        _lib.pager_wait_button.restype = c_int
        _lib.pager_poll_input.argtypes = [POINTER(PagerInput)]
        _lib.pager_poll_input.restype = None

        # Thread-safe input event queue
        _lib.pager_get_input_event.argtypes = [POINTER(PagerInputEvent)]
        _lib.pager_get_input_event.restype = c_int
        _lib.pager_has_input_events.argtypes = []
        _lib.pager_has_input_events.restype = c_int
        _lib.pager_peek_buttons.argtypes = []
        _lib.pager_peek_buttons.restype = c_uint8
        _lib.pager_clear_input_events.argtypes = []
        _lib.pager_clear_input_events.restype = None

        # Backlight / Brightness
        _lib.pager_set_brightness.argtypes = [c_int]
        _lib.pager_set_brightness.restype = c_int
        _lib.pager_get_brightness.argtypes = []
        _lib.pager_get_brightness.restype = c_int
        _lib.pager_get_max_brightness.argtypes = []
        _lib.pager_get_max_brightness.restype = c_int
        _lib.pager_screen_off.argtypes = []
        _lib.pager_screen_off.restype = c_int
        _lib.pager_screen_on.argtypes = []
        _lib.pager_screen_on.restype = c_int

        # Image support
        _lib.pager_load_image.argtypes = [c_char_p]
        _lib.pager_load_image.restype = c_void_p
        _lib.pager_free_image.argtypes = [c_void_p]
        _lib.pager_free_image.restype = None
        _lib.pager_draw_image.argtypes = [c_int, c_int, c_void_p]
        _lib.pager_draw_image.restype = None
        _lib.pager_draw_image_scaled.argtypes = [c_int, c_int, c_int, c_int, c_void_p]
        _lib.pager_draw_image_scaled.restype = None
        _lib.pager_draw_image_file.argtypes = [c_int, c_int, c_char_p]
        _lib.pager_draw_image_file.restype = c_int
        _lib.pager_draw_image_file_scaled.argtypes = [c_int, c_int, c_int, c_int, c_char_p]
        _lib.pager_draw_image_file_scaled.restype = c_int
        _lib.pager_get_image_info.argtypes = [c_char_p, POINTER(c_int), POINTER(c_int)]
        _lib.pager_get_image_info.restype = c_int
        _lib.pager_draw_image_scaled_rotated.argtypes = [c_int, c_int, c_int, c_int, c_void_p, c_int]
        _lib.pager_draw_image_scaled_rotated.restype = None
        _lib.pager_draw_image_file_scaled_rotated.argtypes = [c_int, c_int, c_int, c_int, c_char_p, c_int]
        _lib.pager_draw_image_file_scaled_rotated.restype = c_int
        _lib.pager_screenshot.argtypes = [c_char_p, c_int]
        _lib.pager_screenshot.restype = c_int

    # Initialization
    def init(self):
        """Initialize pager hardware. Call before any other functions."""
        result = _lib.pager_init()
        if result == 0:
            self._initialized = True
        return result

    def cleanup(self):
        """Clean up and release hardware. Always call on exit."""
        if self._initialized:
            _lib.pager_cleanup()
            self._initialized = False

    # Rotation
    def set_rotation(self, rotation):
        """Set display rotation: 0, 90, 180, or 270."""
        _lib.pager_set_rotation(rotation)

    @property
    def width(self):
        """Get current logical screen width."""
        return _lib.pager_get_width()

    @property
    def height(self):
        """Get current logical screen height."""
        return _lib.pager_get_height()

    # Frame management
    def flip(self):
        """Display the current frame. Call once per frame."""
        _lib.pager_flip()

    def clear(self, color=0):
        """Clear screen to color (default black)."""
        _lib.pager_clear(color)

    def get_ticks(self):
        """Get milliseconds since init."""
        return _lib.pager_get_ticks()
